--- a/public/editor.html
+++ b/public/editor.html
@@ -9,7 +9,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/zh-cn.min.js"></script>
   <style>
     #timeline { width: 100%; height: 600px; border: 1px solid lightgray; }
-    .vis-tooltip { white-space: pre-line; }
+    .vis-tooltip { white-space: normal; } /* 确保 tooltip 支持 HTML 换行 */
   </style>
 </head>
 <body>
@@ -37,7 +37,16 @@
         content: event.content || '(无标题)',
         start: event.start,
         end: event.end || null,
-        title: event.title || ''
+        title:
+          `事件类型：${event.EventType || ''}<br>` +
+          `起始时间：${event.Start || ''}<br>` +
+          `结束时间：${event.End || ''}<br>` +
+          `地区：${event.Region || ''}<br>` +
+          `平台：${event.Platform || ''}<br>` +
+          `主机类型：${event.ConsolePlatform || ''}<br>` +
+          `公司：${event.Company || ''}<br>` +
+          `描述：${event.Description || ''}<br>` +
+          `标签：${event.Tag || ''}`
       }));
 
       const container = document.getElementById("timeline");
@@ -47,7 +56,10 @@
         locale: "zh-cn",
         editable: false,
         margin: { item: 10, axis: 5 },
-        tooltip: { followMouse: true, overflowMethod: 'cap' }
+        tooltip: {
+          followMouse: true,
+          overflowMethod: 'cap'
+        }
       });
 
       timeline.setItems(items);
