--- a/public/editor.html
+++ b/public/editor.html
@@ -8,8 +8,19 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/zh-cn.min.js"></script>
   <style>
-    #timeline { width: 100%; height: 600px; border: 1px solid lightgray; }
-    .vis-tooltip { white-space: normal; } /* 确保 tooltip 支持 HTML 换行 */
+    #timeline {
+      width: 100%;
+      height: 800px; /* 增加时间轴高度 */
+      border: 1px solid lightgray;
+    }
+    .vis-tooltip {
+      white-space: normal;
+      max-width: 400px;
+      font-size: 14px;
+      line-height: 1.4;
+      padding: 8px;
+      overflow-wrap: break-word;
+    }
   </style>
 </head>
 <body>
