--- a/public/editor.html
+++ b/public/editor.html
@@ -13,18 +13,19 @@
       height: 800px;
       border: 1px solid lightgray;
     }
-    .vis-tooltip {
-      white-space: normal !important;
-      max-width: none !important;
-      width: auto !important;
-      font-size: 14px;
-      line-height: 1.6;
-      padding: 10px;
-      background-color: #fff;
-      border: 1px solid #ccc;
-      z-index: 1000;
-      box-shadow: 0 0 8px rgba(0,0,0,0.2);
-    }
+.vis-tooltip {
+  white-space: normal !important;
+  max-width: 400px !important;
+  min-width: 250px;
+  font-size: 14px;
+  line-height: 1.6;
+  padding: 10px;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  z-index: 1000;
+  box-shadow: 0 0 8px rgba(0,0,0,0.2);
+}
+
   </style>
 </head>
 <body>
