--- a/public/editor.html
+++ b/public/editor.html
@@ -8,27 +8,32 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/zh-cn.min.js"></script>
   <style>
+    /* ====== 可自由调整区域 BEGIN ====== */
+
+    /* 时间轴容器设置 */
     #timeline {
-      width: 100%;
-      height: 800px;
+      width: 100%;            /* ❖ 时间轴宽度（例：100%, 900px） */
+      height: 1200px;         /* ❖ 时间轴高度（影响 tooltip 可视区域）推荐：800px ~ 1600px */
       border: 1px solid lightgray;
     }
 
-    /* 强化 vis-tooltip 样式 */
+    /* 悬停提示框样式 */
     .vis-tooltip {
-      white-space: normal !important;
-      max-width: 600px !important;
-      min-width: 300px;
-      max-height: none !important;
+      white-space: normal !important;      /* ❖ 保证换行正常显示 */
+      max-width: 700px !important;         /* ❖ 最大宽度（可设为 400px ~ 800px） */
+      min-width: 300px;                    /* ❖ 最小宽度 */
+      max-height: none !important;         /* ❖ 取消高度限制 */
       overflow: visible !important;
-      font-size: 14px;
-      line-height: 1.8;
+      font-size: 14px;                     /* ❖ 字体大小（建议 12px ~ 16px） */
+      line-height: 1.8;                    /* ❖ 行间距（建议 1.5 ~ 2.0） */
       padding: 12px;
       background-color: #fff;
       border: 1px solid #ccc;
       z-index: 1000;
       box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
     }
+
+    /* ====== 可自由调整区域 END ====== */
   </style>
 </head>
 <body>
@@ -56,18 +61,20 @@
         content: event.content || '(无标题)',
         start: event.start,
         end: event.end || null,
-        title: (event.title || '').replace(/\n/g, '<br>') // 关键换行
+        title: (event.title || '').replace(/\n/g, '<br>') // ✅ 将换行符转换为 HTML 换行
       }));
 
       const container = document.getElementById("timeline");
       const timeline = new vis.Timeline(container, items, {
         locale: "zh-cn",
         editable: false,
-        margin: { item: 10, axis: 5 },
+        margin: { item: 20, axis: 10 },
         tooltip: {
           followMouse: true,
-          overflowMethod: 'cap'  // 如果还是不行，可以尝试 'flip'
-        }
+          overflowMethod: 'flip' // ✅ 自动调整 tooltip 避免溢出
+        },
+        verticalScroll: true,     // ✅ 支持垂直滚动
+        zoomKey: "ctrlKey"        // ✅ 使用 Ctrl + 滚轮 缩放，防止误触
       });
     })
     .catch(err => {
