--- a/public/editor.html
+++ b/public/editor.html
@@ -12,20 +12,21 @@
 
     /* 时间轴容器设置 */
     #timeline {
-      width: 100%;             /* ❖ 时间轴宽度（例：100%, 900px） */
-      height: 800px;          /* ❖ 整个画布高度，影响 tooltip 活动范围 */
+      width: 100%;            /* ❖ 时间轴宽度（例：100%, 900px） */
+      height: 3600px;         /* ❖ 画布高度（控制 tooltip 的可视空间） */
       border: 1px solid lightgray;
+      position: relative;
     }
 
     /* 悬停提示框样式 */
     .vis-tooltip {
       white-space: normal !important;      /* ❖ 保证换行正常显示 */
       max-width: 700px !important;         /* ❖ 最大宽度 */
-      min-width: 300px;
-      max-height: none !important;         /* ❖ 不限制 tooltip 高度 */
+      min-width: 300px;                    /* ❖ 最小宽度 */
+      max-height: none !important;         /* ❖ 取消高度限制 */
       overflow: visible !important;
-      font-size: 12px;
-      line-height: 1.5;
+      font-size: 12px;                     /* ❖ 字体大小 */
+      line-height: 1.5;                    /* ❖ 行间距 */
       padding: 12px;
       background-color: #fff;
       border: 1px solid #ccc;
@@ -61,27 +62,33 @@
         content: event.content || '(无标题)',
         start: event.start,
         end: event.end || null,
-        title: (event.title || '').replace(/\n/g, '<br>')
+        title: (event.title || '').replace(/\n/g, '<br>') // ✅ 换行处理
       }));
 
       const container = document.getElementById("timeline");
       const timeline = new vis.Timeline(container, items, {
         locale: "zh-cn",
         editable: false,
+
+        /* ====== 你可以自由调整以下参数 ====== */
+
         margin: {
-          item: 50,       // ❖ 事件和轴线的垂直距离
-          axis: 50       // ❖ 时间轴距离画布顶部，减小以便往上移
+          item: 300,  // ❖ 事件框距离画布上下边界的最小距离（增大可避免悬停被裁剪）
+          axis: 50    // ❖ 时间轴线与事件框之间的垂直距离
         },
+
         orientation: {
-          axis: 'top',    // ❖ 时间轴刻度显示在上方
-          item: 'top'     // ❖ 所有事件显示在时间轴上方
+          axis: 'top',     // ❖ 时间轴线在顶部
+          item: 'bottom'   // ❖ 事件框显示在时间轴上方（推荐）
         },
+
         tooltip: {
           followMouse: true,
-          overflowMethod: 'flip'
+          overflowMethod: 'flip'  // ❖ 防止 tooltip 被画布裁切
         },
+
         verticalScroll: true,
-        zoomKey: 'ctrlKey'
+        zoomKey: "ctrlKey"
       });
     })
     .catch(err => {
