--- a/public/editor.html
+++ b/public/editor.html
@@ -78,7 +78,7 @@
         },
 
         orientation: {
-          axis: 'top',     // ❖ 时间轴线在顶部
+          axis: 'bottom',     // ❖ 时间轴线在底部
           item: 'bottom'   // ❖ 事件框显示在时间轴上方（推荐）
         },
 
