--- a/public/editor.html
+++ b/public/editor.html
@@ -8,93 +8,110 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/zh-cn.min.js"></script>
   <style>
-    /* ====== 可自由调整区域 BEGIN ====== */
-
-    /* 时间轴容器设置 */
     #timeline {
-      width: 100%;            /* ❖ 时间轴宽度（例：100%, 900px） */
-      height: 3600px;         /* ❖ 画布高度（控制 tooltip 的可视空间） */
+      width: 100%;
+      height: 3600px;
       border: 1px solid lightgray;
       position: relative;
     }
-
-    /* 悬停提示框样式 */
     .vis-tooltip {
-      white-space: normal !important;      /* ❖ 保证换行正常显示 */
-      max-width: 700px !important;         /* ❖ 最大宽度 */
-      min-width: 300px;                    /* ❖ 最小宽度 */
-      max-height: none !important;         /* ❖ 取消高度限制 */
+      white-space: normal !important;
+      max-width: 700px !important;
+      min-width: 300px;
+      max-height: none !important;
       overflow: visible !important;
-      font-size: 12px;                     /* ❖ 字体大小 */
-      line-height: 1.5;                    /* ❖ 行间距 */
+      font-size: 12px;
+      line-height: 1.5;
       padding: 12px;
       background-color: #fff;
       border: 1px solid #ccc;
       z-index: 1000;
       box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
     }
-
-    /* ====== 可自由调整区域 END ====== */
   </style>
 </head>
 <body>
   <h2>匿名时间轴编辑器（只读预览）</h2>
+  <button onclick="showAddEventForm()">➕ 增加事件</button>
   <div id="timeline"></div>
+
+  <div id="addEventForm" style="display:none; padding: 20px; border: 1px solid #ccc; margin-top: 20px;">
+    <h3>新增事件</h3>
+    <form id="eventForm">
+      <label>事件名称（必填）：<input type="text" name="Title" required></label><br><br>
+      <label>事件类型（必填）：<select name="EventType" required></select></label><br><br>
+      <label>开始时间（必填）：<input type="date" name="Start" required></label><br><br>
+      <label>结束时间（选填）：<input type="date" name="End"></label><br><br>
+      <label>地区（必填）：<select name="Region" required></select></label><br><br>
+      <label>平台类型（选填）：<select name="Platform"></select></label><br><br>
+      <label>主机类型（选填）：<select name="ConsolePlatform" disabled></select></label><br><br>
+      <label>公司（选填）：<select name="Company"></select></label><br><br>
+      <label>描述（选填）：<textarea name="Description"></textarea></label><br><br>
+      <label>标签（选填）：<select name="Tag" multiple></select></label><br><br>
+      <button type="submit">提交</button>
+    </form>
+  </div>
 
   <script>
     moment.locale("zh-cn");
 
-    fetch("https://script.google.com/macros/s/AKfycbxcv6GqP5USv3zOn2pepoT3mke2fdZuWsoInq6qkDx-2LUMBQTcJpahOtRqUHqBYMjs/exec", {
-      method: "GET",
-      mode: "cors",
-      redirect: "follow",
-      headers: {
-        "Accept": "application/json"
-      }
-    })
-    .then(res => {
-      if (!res.ok) throw new Error("网络请求失败: " + res.status);
-      return res.json();
-    })
-    .then(data => {
-      const items = data.map((event, index) => ({
-        id: event.id || `auto-${index + 1}`,
-        content: event.content || '(无标题)',
-        start: event.start,
-        end: event.end || null,
-        title: (event.title || '').replace(/\n/g, '<br>') // ✅ 换行处理
-      }));
+    function showAddEventForm() {
+      document.getElementById("addEventForm").style.display = "block";
+    }
 
-      const container = document.getElementById("timeline");
-      const timeline = new vis.Timeline(container, items, {
-        locale: "zh-cn",
-        editable: false,
+    // 加载时间轴数据
+    fetch("https://script.google.com/macros/s/AKfycbxcv6GqP5USv3zOn2pepoT3mke2fdZuWsoInq6qkDx-2LUMBQTcJpahOtRqUHqBYMjs/exec")
+      .then(res => res.json())
+      .then(data => {
+        const items = data.map((event, index) => ({
+          id: event.id || `auto-${index + 1}`,
+          content: event.content || '(无标题)',
+          start: event.start,
+          end: event.end || null,
+          title: (event.title || '').replace(/\n/g, '<br>')
+        }));
 
-        /* ====== 你可以自由调整以下参数 ====== */
-
-        margin: {
-          item: 200,  // ❖ 事件框距离画布上下边界的最小距离（增大可避免悬停被裁剪）
-          axis: 50    // ❖ 时间轴线与事件框之间的垂直距离
-        },
-
-        orientation: {
-          axis: 'bottom',     // ❖ 时间轴线在底部
-          item: 'bottom'   // ❖ 事件框显示在时间轴上方（推荐）
-        },
-
-        tooltip: {
-          followMouse: true,
-          overflowMethod: 'flip'  // ❖ 防止 tooltip 被画布裁切
-        },
-
-        verticalScroll: true,
-        zoomKey: "ctrlKey"
+        const container = document.getElementById("timeline");
+        const timeline = new vis.Timeline(container, items, {
+          locale: "zh-cn",
+          editable: false,
+          margin: { item: 200, axis: 50 },
+          orientation: {
+            axis: 'bottom',
+            item: 'bottom'
+          },
+          tooltip: {
+            followMouse: true,
+            overflowMethod: 'flip'
+          },
+          verticalScroll: true,
+          zoomKey: "ctrlKey"
+        });
       });
-    })
-    .catch(err => {
-      document.getElementById("timeline").innerText = "加载失败：" + err.message;
-      console.error("加载失败", err);
-    });
+
+    // 获取下拉框选项（doGetOptions）
+    fetch("https://script.google.com/macros/s/AKfycbxcv6GqP5USv3zOn2pepoT3mke2fdZuWsoInq6qkDx-2LUMBQTcJpahOtRqUHqBYMjs/exec?action=options")
+      .then(res => res.json())
+      .then(options => {
+        const setOptions = (selectName, values) => {
+          const select = document.querySelector(`select[name="${selectName}"]`);
+          if (select) {
+            select.innerHTML = "";
+            values.forEach(v => {
+              const opt = document.createElement("option");
+              opt.value = v;
+              opt.textContent = v;
+              select.appendChild(opt);
+            });
+          }
+        };
+
+        setOptions("EventType", options.EventType);
+        setOptions("Region", options.Region);
+        setOptions("Platform", options.Platform);
+        setOptions("Company", options.Company);
+        setOptions("Tag", options.Tag);
+      });
   </script>
 </body>
 </html>
