--- a/public/editor.html
+++ b/public/editor.html
@@ -10,17 +10,20 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/locale/zh-cn.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/choices.js/public/assets/scripts/choices.min.js"></script>
   <style>
+    /* 时间轴容器样式 */
     #timeline {
-      width: 100%;
-      height: 1000px;
+      width: 100%;                       /* ❖ 时间轴宽度 */
+      height: 1000px;                    /* ❖ 画布整体高度 */
       border: 1px solid lightgray;
       position: relative;
     }
+
+    /* 悬停提示框样式 */
     .vis-tooltip {
-      white-space: normal !important;
-      max-width: 700px !important;
+      white-space: normal !important;    /* ❖ 支持换行 */
+      max-width: 700px !important;       /* ❖ 最大宽度限制 */
       min-width: 300px;
-      max-height: none !important;
+      max-height: none !important;       /* ❖ 不限制最大高度 */
       overflow: visible !important;
       font-size: 12px;
       line-height: 1.5;
@@ -30,6 +33,18 @@
       z-index: 1000;
       box-shadow: 0 0 8px rgba(0, 0, 0, 0.2);
     }
+
+    /* 自定义事件框样式 */
+    .vis-item {
+      font-size: 8px;                   /* ❖ 字体大小 */
+      padding: 2px 4px;                  /* ❖ 内容内边距，影响框大小 */
+      background-color: #f5f5f5;         /* ❖ 背景颜色 */
+      border: 1px solid #aaa;            /* ❖ 边框颜色 */
+      border-radius: 4px;                /* ❖ 圆角 */
+      max-width: 300px;                  /* ❖ 最大宽度 */
+    }
+
+    /* 弹出表单样式 */
     #event-form {
       position: absolute;
       top: 20px;
@@ -85,11 +100,21 @@
         const timeline = new vis.Timeline(container, items, {
           locale: "zh-cn",
           editable: false,
-          margin: { item: 5, axis: 50 },
-          orientation: { axis: 'bottom', item: 'bottom' },
-          tooltip: { followMouse: true, overflowMethod: 'flip' },
+          margin: {
+            item: 10,  // ❖ 事件框距离画布顶部/底部距离和事件框之间的距离
+            axis: 50    // ❖ 时间轴线与事件框的距离
+          },
+          orientation: {
+            axis: 'bottom',   // ❖ 时间轴放在底部
+            item: 'bottom'    // ❖ 事件框出现在时间轴上方（如要显示在下方改为 'top'）
+          },
+          tooltip: {
+            followMouse: true,
+            overflowMethod: 'flip'
+          },
           verticalScroll: true,
-          zoomKey: "ctrlKey"
+          zoomKey: "ctrlKey",
+          stack: true // ❖ 是否自动堆叠事件框。若要允许重叠，请改为 false。
         });
       });
 
@@ -111,11 +136,9 @@
         fill("region", options.Region);
         fill("platform", options.Platform);
         fill("company", options.Company);
-
-        const tagSelect = document.getElementById("tag");
         fill("tag", options.Tag);
 
-        new Choices(tagSelect, {
+        new Choices(document.getElementById("tag"), {
           removeItemButton: true,
           placeholderValue: '请选择标签...',
           searchPlaceholderValue: '搜索标签...',
